Add faster Siri text endpoints
